--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,28 @@
+{}
 {
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  },
-  "firestore": {
-    "rules": "firestore.rules"
-  },
-  "functions": {
-    "source": "functions"
-  }
-}
+    "public": ".",
+    {
+      "hosting": {
+        "public": ".",
+        "ignore": [
+          "firebase.json",
+          {
+            "hosting": {
+              "public": ".",
+              "ignore": [
+                "firebase.json",
+                "**/.*",
+                "**/node_modules/**"
+              ],
+              "rewrites": [
+                {
+                  "source": "**",
+                  "destination": "/index.html"
+                }
+              ]
+            },
+            "firestore": {
+              "rules": "firestore.rules"
+            }
+          }
